# whale

./: .gitignore  404.html  Cargo.toml  index.html  pre-commit  print.html  searchindex.js  searchindex.json
.github/workflows/: cargo_fmt.yml  cargo_publish.yml  cargo_test.yml  github_release.yml  mdbook_build.yml
benches/: Cargo.toml
benchmarks/: Cargo.toml
benchmarks/src/: main.rs
contribution/: code.html  docs.html  index.html
docs/: README.md  book.toml
docs/src/: 404.md  SUMMARY.md  index.md
docs/src/contribution/: code.md  docs.md
lib/rust/: Cargo.toml
proto/: flight.proto
src/: lib.rs
src/cmd/: main.rs
src/common/: config.rs  logger.rs  mod.rs
src/engine/: client.rs  mod.rs  server.rs
src/engine/cache/: mod.rs
src/engine/ddl/: mod.rs
src/engine/ddl/db/: mod.rs
src/engine/ddl/fun/: mod.rs
src/engine/ddl/privilege/: mod.rs
src/engine/ddl/privilege/role/: mod.rs
src/engine/server/: standalone.rs
src/engine/service/: flight.rs
src/engine/sql/: mod.rs
src/engine/sql/plan/: mod.rs
src/engine/store/: mod.rs
website/: config.toml
website/public/: main.css
website/sass/: _about.scss  _base.scss  _vars.scss  main.css  main.css.map
website/templates/: content.html  index.html  macros.html
