[package]
name = "whale"
version = "0.1.0"
authors = ["francis-du <francis@francisdu.com>"]
edition = "2018"

[[bin]]
name = "whale"
path = "src/cmd/main.rs"

[dependencies]
sqlparser = "0.6.1"
structopt = "0.3"
tonic = "0.3"

tokio = { version = "0.2", features = ["macros"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
arrow = { git = "https://github.com/apache/arrow" }
arrow-flight = { git = "https://github.com/apache/arrow" }
datafusion = { git = "https://github.com/apache/arrow" }
parquet = { git = "https://github.com/apache/arrow" }